...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerBaseActivity"
    tools:openDrawer="start"
    android:id="@+id/base_drawer"
    android:fitsSystemWindows="true">

    <include layout="@layout/content_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />
    
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:menu="@menu/main_drawer_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>
