<resources>
    <string name="app_name">GroupCreation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_group">Create Group</string>
    <string name="placeholderval">placeholderval</string>
    <string name="click_here_to_generate_group">Click here to generate group</string>
    <string name="title_activity_get_user_from_serve">GetUserFromServe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
...
