...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_posts_scroller"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/create_post"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="150dp"
            android:background="@drawable/rect_button"
            android:text="Create Post"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <Button
            android:id="@+id/refresh_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rect_button"
            android:text="Refresh"
...
