...
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:layout_marginTop="12dp"
        android:background="@color/teal_darker"
        android:text="Cancel"
        app:layout_constraintStart_toStartOf="@+id/eventMessageEditText"
        app:layout_constraintTop_toBottomOf="@+id/eventMessageEditText" />

    <Button
        android:id="@+id/enterButton"
        android:layout_width="wrap_content"
...
