...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>

    <Button
        android:id="@+id/posts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_button"
        app:layout_constraintTop_toBottomOf="@id/welcome_container"
        app:layout_constraintBottom_toTopOf="@id/group_chat_button"
        app:layout_constraintRight_toRightOf="parent"
...
